# cpp-resume-matcher

./: .env.example  .gitignore  CMakeLists.txt  Candidate.h  Dockerfile  FileManager.cpp  FileManager.h  Job.h  JobMatcher.cpp  JobMatcher.h  Person.cpp  Person.h  README.md  Resume.cpp  Resume.h  main.cpp  server
build-fixed/: CMakeCache.txt.tmp08727
extracted/: gemini_payload_1782138137837951000_18137369640724998020_0.json  gemini_payload_1782138631597063900_18137369640724998020_0.json  gemini_payload_1782140418579237400_1230235464250880600_1.json  gemini_payload_1782141487171781600_4249528327736205830_1.json  gemini_response_1782138631597063900_18137369640724998020_0.json  resume_1782134876869003500_4249528327736205830_1.txt  resume_1782140340927101900_4249528327736205830_0.txt
include/: Candidate.h  FileManager.h  Job.h  JobMatcher.h  Person.h
job_profiles/: job_android.txt  job_backend.txt  job_dataengineer.txt  job_datasecurity.txt  job_devops.txt  job_frontend.txt  job_fullstack.txt  job_ml.txt
resume-frontend/: .env.example  package-lock.json
resume-frontend/src/: App.css  App.js
resumes/: candidate_1.txt  candidate_2.txt  ml_engineer_resume.txt  my_resume.txt
src/: Candidate.cpp  FileManager.cpp  Job.cpp  JobMatcher.cpp  Resume.cpp  main.cpp
